--- a/CSS layout and flexbox-Assessment/css/main.css
+++ b/CSS layout and flexbox-Assessment/css/main.css
@@ -86,15 +86,15 @@ box-shadow: 1px 3px 3px black;
 top: -80px;
 display: flex;
 flex-wrap: wrap;
+justify-content: flex-start;
 width: 100%;
 }
 
 .blog-row{
-  flex-basis: 55%;
+  flex-basis: 50%;
   height: auto;
 }
 aside{
-  flex-basis: 34%;
   background-color: #FAEBD7;
   font-family: 'Josefin Sans';
   line-height: 2em;
@@ -104,15 +104,12 @@ aside{
   margin-left: 95px;
   padding: 25px;
   box-shadow: 1px 3px 5px black;
+  position: relative;
+  left: 670px;
+  bottom: 2280px;
 }
 
-.img-container{
-  display: flex;
-  flex-wrap: wrap;
-  flex-basis: 100%;
-}
 .item{
-  height: auto;
   display: flex;
   flex-wrap: wrap;
   flex-basis: 100%;
@@ -123,6 +120,7 @@ aside{
   box-shadow: 1px 3px 5px black;
   padding-left: 15px;
   padding-right: 15px;
+  padding-bottom: 40px;
   font-family: 'Noto Serif';
   line-height: 2em;
   width: 500px;
@@ -149,35 +147,25 @@ h4{
   flex-basis: 100%;
 }
 .first-container{
-  height: 150px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
   flex-basis: 100%;
+  justify-content: flex-start;
   }
-.blog-img{
-    display: block;
-    position: relative;
-    float: right;
-
-  }
+.text-one{
+  flex-basis: 52%;
+  padding-right: 2%;
+  padding-bottom: 2%;
+}
 .primary-txt{
-flex-basis: 50%;
-padding: 2% 2% 6% 2%;
 font-family: 'Noto Serif';
 font-size: .90em;
+padding-bottom: 5%;
 }
-
-
 .primary-blog{
   display: block;
-  padding:2% 2% 6% 2%;
+  padding-bottom: 5%;
 }
-.primary-blog >p{
-  padding-bottom: 0px;
-}
-
-
 .icon-wrapper{
   background-color: #FAEBD7;
   color: white;
@@ -189,8 +177,6 @@ font-size: .90em;
   bottom: -52px;
   right: -210px;
 }
-
-
 
 .fa-fa-newspaper-o{
   width: auto;
@@ -210,11 +196,9 @@ font-size: .90em;
   font-family: 'Josefin Sans';
   flex-basis: 100%;
   height: 20px;
+  padding-bottom: 6%;
 }
 
-.blog-img{
-  flex-basis: 50%;
-}
 .auth-pic{
   background: url('../img/author.jpeg')center center no-repeat;
   background-size: cover;
@@ -231,15 +215,16 @@ font-size: .90em;
   font-size: 1.25em;
   padding-bottom: 20px;
 }
+
+.img-container{
+  display: block;
+}
 .xx{
   width: 170px;
   height: 170px;
+  display: block;
   float: right;
 }
-.blog-img{
-  flex-basis: 100%;
-}
-
   .icon-wrapper {
     display: flex;
     justify-content: center;
@@ -248,31 +233,54 @@ font-size: .90em;
   i{
   	position: relative;
     top: 5px;
-
   }
 
 
 #yhact{
-
   width: 100px;
   height: 100px;
-
 }
-.primary-txt{
-  display: inline-block;
-  float: left;
+.last-one-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  flex-basis: 96%;
+}
+.last-one{
+  width: 62%;
+}
+.yacht{
+  width: 170px;
+  height: 170px;
+  display: block;
+  float: right;
+  flex-basis: 52%;
+}
+.blog{
+  height: 170px;
+  flex-basis: 38%;
+  padding-top: 8%;
+  padding-left: 4%;
+
+
 }
 #dino{
   background-image: url("../img/dino.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  padding-left: 20px;
+  padding-top: 10%;
+  padding-left: 2%;;
   width: 120px;
   height: 200px;
-  flex-basis: 48%;
-  display: inline-block;
-  float: right;
+  width: 100%;
+  display: flex;
+  flex-basis: 46%;
 }
+
+#xx{
+float: right;
+}
+
 h4{
   font-size: 1.25em;
 }
